@@ -531,7 +531,7 @@ if(FALSE) {
         }
         if (WINDOWS) {
             if (file.exists("cleanup.ucrt"))
-                system("sh ./cleanup.ucrt") 
+                system("sh ./cleanup.ucrt")
             else if (file.exists("cleanup.win"))
                 system("sh ./cleanup.win")
         } else if (file_test("-x", "cleanup")) system("./cleanup")
@@ -1105,7 +1105,7 @@ if(FALSE) {
             # the future.
 
 	    if (!it_patches_base %in% c("no", "disabled", "false", "FALSE")) {
-        
+
                 patches_idx <- tryCatch({
                         idxfile <- file(paste0(it_patches_base, "/",
                                                "patches_idx.rds"))
@@ -1141,7 +1141,7 @@ if(FALSE) {
                             ## be reversed
                             if (system2("patch", args = c("--dry-run", "-R", "-p2", "--binary",
                                                           "--force"), stdin = fname) == 0)
-                                message("NOTE: Skipping installation-time patch ", purl, 
+                                message("NOTE: Skipping installation-time patch ", purl,
                                         " which seems to be already applied.\n")
                             else
                                 message("WARNING: failed to apply patch ", purl, "\n")
@@ -1301,7 +1301,7 @@ if(FALSE) {
                                 force_biarch <- TRUE
                             else if (has_configure_ucrt)
                                 warning("this package has a non-empty 'configure.ucrt' file,\nso building only the main architecture\n", call. = FALSE, domain = NA)
-                            else 
+                            else
                                 warning("this package has a non-empty 'configure.win' file,\nso building only the main architecture\n", call. = FALSE, domain = NA)
                         }
                     }
@@ -1433,7 +1433,7 @@ if(FALSE) {
             ## Windows, even if it is installed.
             if (!grepl(" x64 ", utils::win.version())) test_archs <- "i386"
         }
- 
+
         if (have_cross) Sys.unsetenv("R_ARCH")
 
         if (WINDOWS && dir.exists("install_time_patches"))
@@ -2707,6 +2707,8 @@ if(FALSE) {
                   else if(isFALSE(use_lto)) c("LTO=", "LTO_FC=")
                   )
 
+    if(config_val_to_logical(Sys.getenv("_R_INSTALL_USE_FC_LEN_T_", "FALSE")))
+         makeargs <- c(makeargs, "XDEFS=-DUSE_FC_LEN_T")
     cmd <- paste(MAKE, p1(paste("-f", shQuote(makefiles))), p1(makeargs),
                  p1(makeobjs))
     if (dry_run) {
